# MimiClaw

./: .env.development  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  CLAUDE.md  README.ja-JP.md  README.md  README.zh-CN.md  USAGE_IMPLEMENTATION_SUMMARY.md  electron-builder.cloud.yml  electron-builder.yml  electron-menu-shortcuts-JjbDTLdf.js  index.html  main-CBxyb7sE.js  package.json  pnpm-lock.yaml  projectless-thread-Bf683e5X.js  tailwind.config.js  vite.config.ts
.claude/: settings.local.json  skills
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/runner/: Dockerfile  README.md  (+2 more)
backend/: .env.example  README.md  package-lock.json  package.json
docs/: PRD-Claude-Code-CLI-UI-Adaptation.md  token-usage-fix.md  usage-extraction.md
electron/: load-env.ts
patches/: @lobehub__editor.patch
resources/: mac-requirements.txt
rust-indexer/: Cargo.toml  README.md
rust-indexer/src/: main.rs
scripts/: after-pack.cjs  build-mac-dmg.sh  bundle-openclaw-plugins.mjs  cos-publish.py  download-bundled-node.mjs  download-bundled-uv.mjs  generate-icons.mjs  generate-pet-videos-seedance.mjs  generate-pet-videos.mjs  installer.nsh  npm-version.mjs  package-cloud.mjs  package-prep-ci.mjs  prepare-preinstalled-skills-dev.mjs  release-version.mjs  tag-push.mjs
shared/: appearance.ts  browser-inspector.ts  browser-use.ts  claude-code-runtime.ts  cloud-auth.ts  code-agent.ts  gateway-scopes.ts  language.ts  local-executor.ts  pet-companion.ts  pet.ts  voice-chat.ts
src/: App.tsx  main.tsx  vite-env.d.ts
tests/: file-reference-markdown.test.ts  setup.ts
(+1036 files in other folders)
